2011-10-03  Zeno Albisser  <zeno.albisser@nokia.com>

        [Qt][WebKit2][Mac] WebProcess should exit automatically when UIProcess dies.
        https://bugs.webkit.org/show_bug.cgi?id=68439

        We use a dispatch queue and a dispatch source in the WebProcess
        to receive a notification when the UI Process dies.
        The WebProcess then commits suicide.

        Reviewed by Andreas Kling.

        * WebProcess/qt/WebProcessQt.cpp:
        (WebKit::parentProcessDiedCallback):
        (WebKit::WebProcess::platformInitializeWebProcess):

2011-10-02  Zeno Albisser  <zeno.albisser@nokia.com>

        [Qt][WK2][Mac] WebKit2 does not build on mac after merge of Qt5 refactor branch.
        https://bugs.webkit.org/show_bug.cgi?id=69223

        After the merge of the Qt5 refactor branch, networking stuff has been
        extracted into a separate library. The qmlplugin needs to link to that
        library to get QNetworkReply defined.

        Reviewed by Noam Rosenthal.

        * UIProcess/API/qt/qmlplugin/qmlplugin.pro:

2011-10-01  Geoffrey Garen  <ggaren@apple.com>

        Removed redundant helper functions for allocating Strong handles
        https://bugs.webkit.org/show_bug.cgi?id=69218

        Reviewed by Sam Weinig.

        * WebProcess/Plugins/Netscape/NPJSObject.cpp:
        * WebProcess/Plugins/Netscape/NPRuntimeObjectMap.cpp:

2011-09-30  Sam Weinig  <sam@webkit.org>

        Add support for eventSender.mouseScrollBy in WTR
        https://bugs.webkit.org/show_bug.cgi?id=69189

        Reviewed by Simon Fraser.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::handleWheelEvent):
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::wheelEventSyncForTesting):
        * WebProcess/WebPage/WebPage.h:
        * WebProcess/WebPage/WebPage.messages.in:
        Add sync version of wheel event handling for use in testing.

2011-09-30  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>
