@@ -69,7 +69,7 @@ private:
 #if PLUGIN_ARCHITECTURE(X11)
     void applyX11QuirksBeforeLoad();
     static void setMIMEDescription(const String& mimeDescription, PluginModuleInfo&);
-    bool pluginInfo(PluginModuleInfo&);
+    bool getPluginInfoForLoadedPlugin(PluginModuleInfo&);
 #endif
 
     bool tryGetSitesWithData(Vector<String>&);
